fixed alignment

--- a/css/home.css
+++ b/css/home.css
@@ -98,11 +98,14 @@ body {
   margin-top: 50px;
 }
 
+
 .network-display {
   height: 600px;
   width: 450px;
   border: 1px solid lightgray;
-  margin-left: 50px;
+  margin-right: 60px;
+  margin-top: 50px;
+  float: right;
 }
 #mynetwork, .network-display {
   display: inline-block;
